<?xml version="1.0"?>
<package format="2">
  <name>dynavoro</name>
  <version>0.0.1</version>
  <description>The description of your package</description>

  <maintainer email="you@example.com">Name</maintainer>
  <license>BSD</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>costmap_2d</depend>
  
  <!-- Other optional tags -->
  <url type="website">http://wiki.ros.org/your_package_name</url>
  <url type="repository">https://github.com/your_github/your_package_name</url>
  <url type="bugtracker">https://github.com/your_github/your_package_name/issues</url>

  <author>Your Name</author>
</package>